[package]
name = "hypixel-api"
version = "0.1.0"
edition = "2021"
authors = [ "GrizzlT" ]
license = "MIT OR Apache-2.0"
description = "Generic wrapper around the hypixel api (automatic rate-limiting on client-side)"
repository = "https://github.com/GrizzlT/hypixel-api-rust"
keywords = [ "hypixel", "api", "wrapper", "rate-limiting", "PublicAPI" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = [ "serde" ] }
serde = { version = "1.0.136", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
parking_lot = "0.12.0"
reqwest = { version = "0.11.9", features = ["json"] }
futures = "0.3.21"
tracing = "0.1.31"
thiserror = "1.0.30"
